<resources>
    <string name="app_name">瞧瞧</string>
    <string name="phone_base_info">手机基本信息</string>
    <string name="image_transition">image_transition</string>
    <string name="string_close">点击关闭</string>
    <string name="string_download">点击下载</string>
    <string name="string_position">修正方向</string>
    <string name="string_scale">原始大小</string>
    <string name="string_shr">适应屏幕</string>
    <string name="string_bizhi">设为壁纸</string>
</resources>
