<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:background="@color/black"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <ImageView
            android:id="@+id/imgBgId"
            android:scaleType="centerCrop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    <View
            android:background="#aa000000"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    <com.intelligence.kotlindpwork.weight.TouchImageView
            android:id="@+id/imgView"
            android:layout_centerInParent="true"
            android:transitionName="@string/image_transition"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    <LinearLayout
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <LinearLayout
                android:layout_marginBottom="10dp"
                android:id="@+id/scrTouch"
                android:background="@drawable/shape_corner_touch_up_top_bottom"
                android:layout_width="100dp"
                android:gravity="center"
                android:layout_height="40dp">

            <TextView
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:text="@string/string_shr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
                android:layout_marginBottom="10dp"
                android:id="@+id/scaleTouch"
                android:background="@drawable/shape_corner_touch_up_top_bottom"
                android:layout_width="100dp"
                android:gravity="center"
                android:layout_height="40dp">

            <TextView
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:text="@string/string_scale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
                android:layout_marginBottom="10dp"
                android:id="@+id/positionTouch"
                android:background="@drawable/shape_corner_touch_up_top_bottom"
                android:layout_width="100dp"
                android:gravity="center"
                android:layout_height="40dp">

            <TextView
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:text="@string/string_position"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/downTouch"
                android:layout_marginBottom="10dp"
                android:background="@drawable/shape_corner_touch_up_top_bottom"
                android:layout_width="100dp"
                android:gravity="center"
                android:layout_height="40dp">

            <TextView
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:text="@string/string_download"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/closeTouch"
                android:background="@drawable/shape_corner_touch_up_top_bottom"
                android:layout_width="100dp"
                android:gravity="center"
                android:layout_height="40dp">

            <TextView
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:text="@string/string_close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>